[package]
name = "roboxmaker_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_models = {path = "../roboxmaker_models"}
# yew-router = { version = "0.15.0", default-features = false }
yew-router = { version = "0.18" }
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
serde = { version = "1", features = ["derive"] }

