[package]
name = "roboxmaker_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_models = {path = "../roboxmaker_models"}
roboxmaker_message = {path = "../roboxmaker_message"}
roboxmaker_loaders = {path = "../roboxmaker_loaders"}
roboxmaker_searches = {path = "../roboxmaker_searches"}
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
yew = "0.21"
log = "0.4"
serde_derive = "1"
serde = { version = "1", features = ["derive"] }
yew-router = "0.18"
js-sys = "0.3"
regex = "1.10"
code_location = "1.1"
gloo-utils = "0.2"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
http = "0.2.8"
gloo-timers = "0.2"
gloo-file = "0.3"
gloo = "0.8"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration",
  "File",
  "DragEvent",
  "DataTransfer",
]