[package]
name = "roboxmaker_whiteboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = {path = "../roboxmaker_main"}
roboxmaker_models = {path = "../roboxmaker_models"}
roboxmaker_types = {path = "../roboxmaker_types"}

log = "0.4"
uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
yew = { version = "0.18", features = ["default", "toml"] }
